--- a/Animalerie.WPF/MainWindow.xaml
+++ b/Animalerie.WPF/MainWindow.xaml
@@ -1,12 +1,39 @@
 ﻿<Window x:Class="Animalerie.WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Animalerie.WPF"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Gestion du Refuge" Height="600" Width="1000">
+    <Window.Resources>
+        <Style x:Key="MenuButtonStyle" TargetType="Button">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Padding" Value="15,0"/>
+            <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#34495E"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
 
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="0" Background="#2C3E50">
+            <TextBlock Text="NAVIGATION" Foreground="White" Margin="10,20" FontWeight="Bold" HorizontalAlignment="Center"/>
+
+            <Button Content="Liste des Animaux" Click="BtnListe_Click" Style="{StaticResource MenuButtonStyle}" />
+            <Button Content="Ajouter un Animal" Click="BtnAjout_Click" Style="{StaticResource MenuButtonStyle}" />
+            <Separator Background="#34495E" Margin="10"/>
+            <!--<Button Content="Liste Contacts" Click="BtnContacts_Click" Style="{StaticResource MenuButtonStyle}"/>
+            <Button Content="Ajouter Contact" Click="BtnAjoutContact_Click" Style="{StaticResource MenuButtonStyle}"/>`-->
+        </StackPanel>
+
+        <Frame x:Name="MainFrame" Grid.Column="1" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
