--- a/Animalerie.WPF/Pages/Animal/AnimalAddPage.xaml
+++ b/Animalerie.WPF/Pages/Animal/AnimalAddPage.xaml
@@ -1,7 +1,12 @@
 ﻿<Page x:Class="Animalerie.WPF.Pages.AnimalAddPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Title="Ajouter un Animal">
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:vm="clr-namespace:Animalerie.WPF.ViewModels"
+      mc:Ignorable="d"
+      Title="Ajouter un Animal"
+      d:DataContext="{d:DesignInstance Type=vm:AnimalAddViewModel}">
 
     <ScrollViewer Margin="20">
         <StackPanel>
@@ -9,14 +14,11 @@
 
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="150"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
+
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -27,44 +29,34 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <Label Content="Identifiant :" Grid.Row="0"/>
-                <TextBox x:Name="txtId" Grid.Row="0" Grid.Column="1" Margin="5"/>
+                <Label Content="Identifiant :" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center"/>
+                <TextBox Text="{Binding Id, UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" Grid.Column="1" Margin="5"/>
 
-                <Label Content="Nom :" Grid.Row="1"/>
-                <TextBox x:Name="txtNom" Grid.Row="1" Grid.Column="1" Margin="5"/>
+                <Label Content="Nom :" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center"/>
+                <TextBox Text="{Binding Nom}" Grid.Row="1" Grid.Column="1" Margin="5"/>
 
-                <Label Content="Type :" Grid.Row="2"/>
-                <ComboBox x:Name="cbType" Grid.Row="2" Grid.Column="1" Margin="5"/>
+                <Label Content="Type :" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center"/>
+                <ComboBox ItemsSource="{Binding TypesList}" SelectedItem="{Binding SelectedType}" Grid.Row="2" Grid.Column="1" Margin="5"/>
 
-                <Label Content="Sexe :" Grid.Row="3"/>
-                <ComboBox x:Name="cbSexe" Grid.Row="3" Grid.Column="1" Margin="5"/>
+                <Label Content="Sexe :" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center"/>
+                <ComboBox ItemsSource="{Binding SexesList}" SelectedItem="{Binding SelectedSexe}" Grid.Row="3" Grid.Column="1" Margin="5"/>
 
-                <Label Content="Date Naissance :" Grid.Row="4"/>
-                <DatePicker x:Name="dpNaissance" Grid.Row="4" Grid.Column="1" Margin="5"/>
+                <Label Content="Date Naissance :" Grid.Row="4" Grid.Column="0" VerticalAlignment="Center"/>
+                <DatePicker SelectedDate="{Binding DateNaissance}" Grid.Row="4" Grid.Column="1" Margin="5"/>
 
-                <Label Content="Couleurs :" Grid.Row="5"/>
-                <TextBox x:Name="txtCouleurs" Grid.Row="5" Grid.Column="1" Margin="5"/>
+                <Label Content="Couleurs :" Grid.Row="5" Grid.Column="0" VerticalAlignment="Center"/>
+                <TextBox Text="{Binding CouleursInput}" Grid.Row="5" Grid.Column="1" Margin="5"/>
 
-                <Label Content="Particularités :" Grid.Row="6"/>
-                <TextBox x:Name="txtPartic" Grid.Row="6" Grid.Column="1" Margin="5" Height="60" TextWrapping="Wrap" AcceptsReturn="True"/>
+                <Label Content="Raison Entrée :" Grid.Row="6" Grid.Column="0" VerticalAlignment="Center"/>
+                <ComboBox ItemsSource="{Binding RaisonsList}" SelectedItem="{Binding SelectedRaison}" Grid.Row="6" Grid.Column="1" Margin="5"/>
 
-                <Label Content="Description :" Grid.Row="7"/>
-                <TextBox x:Name="txtDesc" Grid.Row="7" Grid.Column="1" Margin="5" Height="60" TextWrapping="Wrap" AcceptsReturn="True"/>
-
-                <Label Content="Date Stérilisation :" Grid.Row="8"/>
-                <DatePicker x:Name="dpSteril" Grid.Row="8" Grid.Column="1" Margin="5"/>
-
-                <Label Content="Raison Entrée :" Grid.Row="9"/>
-                <ComboBox x:Name="cbRaison" Grid.Row="9" Grid.Column="1" Margin="5"/>
-
-                <Label Content="Date d'entrée :" Grid.Row="10"/>
-                <DatePicker x:Name="dpEntree" Grid.Row="10" Grid.Column="1" Margin="5"/>
-
-                <Label Content="Contact :" Grid.Row="11"/>
-                <ComboBox x:Name="cbContact" Grid.Row="11" Grid.Column="1" Margin="5" DisplayMemberPath="Nom"/>
+                <Label Content="Contact :" Grid.Row="7" Grid.Column="0" VerticalAlignment="Center"/>
+                <ComboBox ItemsSource="{Binding ContactsList}" SelectedItem="{Binding SelectedContact}" Grid.Row="7" Grid.Column="1" Margin="5" DisplayMemberPath="Nom"/>
             </Grid>
 
-            <Button Content="Enregistrer l'animal" Click="BtnSave_Click" Margin="0,20" Height="40" Background="#27AE60" Foreground="White" FontWeight="Bold"/>
+            <Button Content="Enregistrer l'animal" 
+                    Command="{Binding SaveCommand}"
+                    Margin="0,20" Height="40" Background="#27AE60" Foreground="White" FontWeight="Bold"/>
         </StackPanel>
     </ScrollViewer>
 </Page>
