[Refacto] Animal : list to MVVM pattern

--- a/Animalerie.WPF/Pages/Animal/AnimalListPage.xaml
+++ b/Animalerie.WPF/Pages/Animal/AnimalListPage.xaml
@@ -1,6 +1,11 @@
 ﻿<Page x:Class="Animalerie.WPF.Pages.AnimalListPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:vm="clr-namespace:Animalerie.WPF.ViewModels.Animals"
+      mc:Ignorable="d"
+      d:DataContext="{d:DesignInstance Type=vm:AnimalListViewModel}"
       Title="Liste des Animaux">
 
     <Grid Margin="20">
@@ -16,35 +21,45 @@
             <StackPanel Orientation="Horizontal">
                 <StackPanel Margin="0,0,15,0">
                     <Label Content="Nom :" Padding="0,0,0,2"/>
-                    <TextBox x:Name="txtFilterNom" Width="120" TextChanged="FilterChanged"/>
+                    <TextBox Width="120" 
+                             Text="{Binding FilterNom, UpdateSourceTrigger=PropertyChanged}"/>
                 </StackPanel>
 
                 <StackPanel Margin="0,0,15,0">
                     <Label Content="Type :" Padding="0,0,0,2"/>
-                    <ComboBox x:Name="cbFilterType" Width="100" SelectionChanged="FilterChanged"/>
+                    <ComboBox Width="100" 
+                              ItemsSource="{Binding TypesAvailable}"
+                              SelectedItem="{Binding FilterType}"/>
                 </StackPanel>
 
                 <StackPanel Margin="0,0,15,0">
                     <Label Content="Sexe :" Padding="0,0,0,2"/>
-                    <ComboBox x:Name="cbFilterSexe" Width="80" SelectionChanged="FilterChanged"/>
+                    <ComboBox Width="80" 
+                              ItemsSource="{Binding SexesAvailable}"
+                              SelectedItem="{Binding FilterSexe}"/>
                 </StackPanel>
 
                 <StackPanel Margin="0,0,15,0">
                     <Label Content="Statut :" Padding="0,0,0,2"/>
-                    <ComboBox x:Name="cbFilterStatus" Width="120" SelectionChanged="FilterChanged"/>
+                    <ComboBox Width="120" 
+                              ItemsSource="{Binding StatusAvailable}"
+                              SelectedItem="{Binding FilterStatus}"/>
                 </StackPanel>
 
-                <Button Content="Réinitialiser" Click="ResetFilters_Click" VerticalAlignment="Bottom" Padding="10,2" Margin="10,0,0,0"/>
+                <Button Content="Réinitialiser" 
+                        Command="{Binding ResetFiltersCommand}" 
+                        VerticalAlignment="Bottom" Padding="10,2" Margin="10,0,0,0"/>
             </StackPanel>
         </Border>
 
         <DataGrid x:Name="dgAnimaux" 
-               Grid.Row="2" 
-               AutoGenerateColumns="False" 
-               IsReadOnly="True" 
-               GridLinesVisibility="Horizontal"
-               HorizontalGridLinesBrush="#DDDDDD"
-               Background="White">
+                  Grid.Row="2" 
+                  ItemsSource="{Binding Animaux}"
+                  AutoGenerateColumns="False" 
+                  IsReadOnly="True" 
+                  GridLinesVisibility="Horizontal"
+                  HorizontalGridLinesBrush="#DDDDDD"
+                  Background="White">
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Identifiant" Binding="{Binding Id}" Width="110"/>
