--- a/Animalerie.WPF/MainWindow.xaml
+++ b/Animalerie.WPF/MainWindow.xaml
@@ -30,6 +30,8 @@
             <Button Content="Liste des Animaux" Click="BtnListe_Click" Style="{StaticResource MenuButtonStyle}" />
             <Button Content="Ajouter un Animal" Click="BtnAjout_Click" Style="{StaticResource MenuButtonStyle}" />
             <Separator Background="#34495E" Margin="10"/>
+            <Button Content="Gérer les compatibilités" Click="BtnCompatibilites_Click" Style="{StaticResource MenuButtonStyle}" />
+            <Separator Background="#34495E" Margin="10"/>
             <!--<Button Content="Liste Contacts" Click="BtnContacts_Click" Style="{StaticResource MenuButtonStyle}"/>
             <Button Content="Ajouter Contact" Click="BtnAjoutContact_Click" Style="{StaticResource MenuButtonStyle}"/>`-->
         </StackPanel>
