--- a/Animalerie.WPF/Pages/Animal/AnimalDetailsPage.xaml
+++ b/Animalerie.WPF/Pages/Animal/AnimalDetailsPage.xaml
@@ -16,6 +16,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
             <TextBlock Text="Détails de l'animal" FontSize="24" FontWeight="Bold" Margin="0,0,0,20"/>
@@ -28,9 +29,11 @@
                         <ColumnDefinition Width="30"/>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
@@ -56,12 +59,12 @@
                     <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding SelectedAnimal.Id}"/>
 
                     <TextBlock Grid.Row="2" Grid.Column="3" Text="Né(e) le :" FontWeight="Bold" Margin="0,0,10,5"/>
-                    <TextBlock Grid.Row="2" Grid.Column="4" 
-                   Text="{Binding SelectedAnimal.DateNaissance, StringFormat=dd/MM/yyyy}"/>
+                    <TextBlock Grid.Row="2" Grid.Column="4" Text="{Binding SelectedAnimal.DateNaissance, StringFormat=dd/MM/yyyy}"/>
 
                     <TextBlock Grid.Row="3" Grid.Column="0" Text="Status :" FontWeight="Bold" Margin="0,0,10,5"/>
                     <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding SelectedAnimal.Status}"/>
 
+                    <Button Grid.Row="3" Grid.Column="3" Content="Entrez une demande d'adoption" Command="{Binding EditCompatCommand}" Width="auto" Padding="10,5" Margin="0,0,10,10" HorizontalAlignment="Left" />
                 </Grid>
             </Border>
 
