--- a/Animalerie.WPF/Pages/Animal/AnimalDetailsPage.xaml
+++ b/Animalerie.WPF/Pages/Animal/AnimalDetailsPage.xaml
@@ -64,7 +64,7 @@
                     <TextBlock Grid.Row="3" Grid.Column="0" Text="Status :" FontWeight="Bold" Margin="0,0,10,5"/>
                     <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding SelectedAnimal.Status}"/>
 
-                    <Button Grid.Row="3" Grid.Column="3" Content="Entrez une demande d'adoption" Command="{Binding EditCompatCommand}" Width="auto" Padding="10,5" Margin="0,0,10,10" HorizontalAlignment="Left" />
+                    <Button Grid.Row="3" Grid.Column="3" Content="Entrez une demande d'adoption" Command="{Binding CreateAdoptionDemandCommand}" Width="auto" Padding="10,5" Margin="0,0,10,10" HorizontalAlignment="Left" />
                 </Grid>
             </Border>
 
