--- a/Animalerie.WPF/Pages/Animal/AnimalAdoptionForm.xaml
+++ b/Animalerie.WPF/Pages/Animal/AnimalAdoptionForm.xaml
@@ -24,12 +24,23 @@
         <TextBox Text="{Binding Note, UpdateSourceTrigger=PropertyChanged}" 
                  Height="100" TextWrapping="Wrap" AcceptsReturn="True" Margin="0,5,0,20"/>
 
+        <TextBlock Text="Statut de la demande :" FontWeight="Bold" Margin="0,0,0,5"/>
+        <ComboBox ItemsSource="{Binding StatutOptions}" 
+          SelectedItem="{Binding SelectedStatut}"
+          Margin="0,0,0,15">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+
         <StackPanel Orientation="Horizontal">
-            <Button Content="Annuler l'adoption" 
+            <Button Content="Revenir en arrière" 
                     Command="{Binding CancelCommand}" 
                     Padding="10,5" Margin="0,0,10,0"/>
 
-            <Button Content="Confirmer l'adoption" 
+            <Button Content="Sauvegarder" 
                     Command="{Binding ValiderAdoptionCommand}" 
                     Padding="10,5" Margin="0,0,10,0"/>
         </StackPanel>
