--- a/Animalerie.WPF/Pages/Contact/ContactFormPage.xaml
+++ b/Animalerie.WPF/Pages/Contact/ContactFormPage.xaml
@@ -1,7 +1,11 @@
 ﻿<Page x:Class="Animalerie.WPF.Pages.Contact.ContactFormPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:conv="clr-namespace:Animalerie.WPF.Converters"
       Title="Formulaire Contact">
+    <Page.Resources>
+        <conv:RoleCheckedConverter x:Key="RoleCheckedConverter" />
+    </Page.Resources>
 
     <ScrollViewer Margin="20">
         <StackPanel MaxWidth="400" HorizontalAlignment="Left">
@@ -38,6 +42,25 @@
 
             <Label Content="Email" Margin="0,10,0,0"/>
             <TextBox Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,0,10"/>
+
+            <Label Content="Rôles" Margin="0,10,0,0"/>
+            <ItemsControl ItemsSource="{Binding AllRoles}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <CheckBox Content="{Binding Nom}" 
+          Margin="0,0,10,5"
+          Command="{Binding DataContext.ToggleRoleCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+          CommandParameter="{Binding}">
+                            <CheckBox.IsChecked>
+                                <MultiBinding Converter="{StaticResource RoleCheckedConverter}" Mode="OneWay">
+                                    <Binding Path="." />
+                                    <Binding Path="DataContext.Roles" RelativeSource="{RelativeSource AncestorType=Page}" />
+                                </MultiBinding>
+                            </CheckBox.IsChecked>
+                        </CheckBox>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,20,0,0">
                 <Button Content="Annuler" Command="{Binding CancelCommand}" Width="80" Margin="0,0,10,0"/>
