--- a/Animalerie.WPF/MainWindow.xaml
+++ b/Animalerie.WPF/MainWindow.xaml
@@ -34,6 +34,10 @@
             <Separator Background="#34495E" Margin="10"/>
             <Button Content="Liste Contacts" Click="BtnContacts_Click" Style="{StaticResource MenuButtonStyle}"/>
             <Button Content="Ajouter Contact" Click="BtnAjoutContact_Click" Style="{StaticResource MenuButtonStyle}"/>
+            <Separator Background="#34495E" Margin="10"/>
+            <Button Content="Gérer les vaccins" Click="BtnVaccins_Click" Style="{StaticResource MenuButtonStyle}" />
+
+
         </StackPanel>
 
         <Frame x:Name="MainFrame" Grid.Column="1" NavigationUIVisibility="Hidden"/>
